# rlm-rs

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  compose.yaml  plan.md  pyproject.toml  sequence.md
docker/: AGENTS.md  api.Dockerfile  parser.Dockerfile  ui.Dockerfile  worker.Dockerfile
docs/: AGENTS.md  component.md  fine_tuning_rlm_policy.md  plan.md  rls_spec.md  runtime_examples.md  runtime_sequence.md  sequence.md  ui_spec.md
scripts/: AGENTS.md  build_finetune_datasets.py  evaluate_finetuned_policy.py  export_finetune_traces.py  load_test.sh  localstack_init.sh  recompute_evaluation.py  smoke_test.sh  ui_smoke_test.sh
scripts/e2e/: AGENTS.md  run-all-tests.md  run-e2e-tests.sh  test-answerer.md  test-app-shell.md  test-debug.md  test-executions-list.md  test-responsive.md  test-runtime.md  test-sessions.md
scripts/ralph/: AGENTS.md  codebase_map.md  prd.json  prd_original.json  prd_prompt.txt  progress.txt  prompt.md  rebuild_prd.json  understand_prompt.md
src/: AGENTS.md
src/rlm_rs/: AGENTS.md  __init__.py  code_log.py  errors.py  logging.py  models.py  observability.py  settings.py  worker_entrypoint.py
src/rlm_rs.egg-info/: AGENTS.md  PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: AGENTS.md  test_smoke.py
tests/__pycache__/: AGENTS.md
tests/integration/: AGENTS.md  test_ddb_s3_roundtrip.py  test_evaluation.py  test_list_executions_api.py  test_orchestrator_answerer.py
ui/: .gitignore  AGENTS.md  README.md  eslint.config.mjs  next.config.js  package-lock.json  package.json  playwright.config.ts
(+146 files in other folders)
