[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlm-rs"
version = "0.1.0"
description = "RLM reference implementation"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0.0",
  "pytest>=8.0.0",
  "ruff>=0.4.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
