[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlm-rs"
version = "0.1.0"
description = "RLM reference implementation"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.42.30",
  "fastapi>=0.128.0",
  "httpx>=0.28.1",
  "mcp>=1.25.0",
  "openai>=2.15.0",
  "opentelemetry-exporter-otlp>=1.39.1",
  "opentelemetry-instrumentation-fastapi>=0.60b1",
  "opentelemetry-sdk>=1.39.1",
  "pdfminer-six>=20260107",
  "prometheus-client>=0.24.1",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "pytest>=8.0.0",
  "ruff>=0.4.0",
  "structlog>=24.0.0",
  "tenacity>=9.1.2",
  "uvicorn>=0.40.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
